# local-biz-lead-crawler

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml  seeds.yaml
crawler/: fetch.py  parse.py  run.py  run_discovery.py  score.py  store.py
crawler/discover/: __init__.py  directory.py  search_api.py  seeds.py
scripts/: export_csv.py
src/configs/: seeds.yaml
src/crawler/: __init__.py  analyze.py  run_analyze.py  run_discovery.py  score.py  store.py
src/crawler/discover/: directory.py
src/data/: leads.sqlite  leads.sqlite-shm  leads.sqlite-wal
src/scripts/: export_discovered.py  report_analysis.py
src/ui/: Home.py  app.py
src/ui/pages/: Details.py
